# Projet-C-Victor-Christopher

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  build.sh  center.hh  clickablelabel.cc  clickablelabel.hh  fonctions.cc  fonctions.hh  headcoach.cc  headcoach.hh  jeu.hh  joueur.cc  joueur.hh  main.cc  match.cc  match.hh  moc_clickablelabel.cpp  mon_programme  out  person.hh  pointguard.hh  powerforward.hh  question.cc  question.hh  run.sh  shootingguard.hh  smallforward.hh  test.sh
.github/workflows/: doctest.yml
include/: Center.hh  ClickableLabel.hh  HeadCoach.hh  Jeu.hh  Joueur.hh  Match.hh  Person.hh  PointGuard.hh  PowerForward.hh  ShootingGuard.hh  SmallForward.hh  fonctions.hh  question.hh
lib/basketball/: CMakeLists.txt  main.cpp  run.sh
lib/basketball/include/: Ball.h  Game.h  Net.h  Solid.h
lib/basketball/src/: Ball.cpp  Game.cpp  Net.cpp  Solid.cpp
src/: Center.cc  ClickableLabel.cc  HeadCoach.cc  Joueur.cc  Match.cc  PointGuard.cc  PowerForward.cc  ShootingGuard.cc  SmallForward.cc  fonctions.cc  question.cc
tests/: .depends  Makefile  TestCase.cc
